--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -5,7 +5,7 @@
 <html>
 
     <head>
-        <title>{{ category.name }}</title>
+        <title>Rango</title>
     </head>
 
     <body>
@@ -21,13 +21,16 @@
             {% else %}
                 <strong>No pages currently in category.</strong>
             {% endif %}
+            <div>
+                <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a><br />
+            </div>
         {% else %}
             The specified category does not exist.
         {% endif %}
         </div>
 
         <div>
-            <a href="/rango/">Index</a>
+            <a href="/rango/">Index</a><br />
         </div>
     </body>
 
