--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,29 +1,19 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
+{% block title_block %}
+    About Rango
+{% endblock %}
 
-    <head>
-        <title>About</title>
-    </head>
 
-    <body>
+{% block body_block %}
+    <h1>Rango says...</h1>
 
-        <h1>Rango says...</h1>
+    <div>
+        here is the about page. <br />
+        <strong>This tutorial has been put together by {{myname}}</strong><br />
+    </div>
 
-        <div>
-            here is the about page. <br />
-            <strong>This tutorial has been put together by {{myname}}</strong><br />
-        </div>
-
-        <div>
-            <a href="/rango/">Index</a><br />
-        </div>
-
-        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-        <img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a Cat" />
-
-    </body>
-
-</html>
+    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+    <img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a Cat" />
+{% endblock %}
