--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,37 +1,33 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
+{% block title_block %}
+    {% if category %}
+        {{ category.name }}
+    {% else %}
+        Unknown Category
+    {% endif %}
+{% endblock %}
 
-    <head>
-        <title>Rango</title>
-    </head>
 
-    <body>
-        <div>
-        {% if category %}
-            <h1>{{ category.name }}</h1>
-            {% if pages %}
-                <ul>
-                {% for page in pages %}
-                    <li><a href='{{ page.url }}'>{{ page.title }}</a></li>
-                {% endfor %}
-                </ul>
-            {% else %}
-                <strong>No pages currently in category.</strong>
-            {% endif %}
-            <div>
-                <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a><br />
-            </div>
+{% block body_block %}
+    {% if category %}
+        <h1>{{ category.name }}</h1>
+        {% if pages %}
+            <ul>
+            {% for page in pages %}
+                <li><a href='{{ page.url }}'>{{ page.title }}</a></li>
+            {% endfor %}
+            </ul>
         {% else %}
-            The specified category does not exist.
+            <strong>No pages currently in category.</strong>
         {% endif %}
-        </div>
 
-        <div>
-            <a href="/rango/">Index</a><br />
-        </div>
-    </body>
+        <a href="{% url 'rango:add_page' category.slug %}">
+            Add Page
+        </a><br />
 
-</html>
+    {% else %}
+        The specified category does not exist.
+    {% endif %}
+{% endblock %}
