--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -11,9 +11,11 @@
 
     <div>
         here is the about page. <br />
-        <strong>This tutorial has been put together by {{myname}}</strong><br />
+        <strong>This tutorial has been put together by yuuto</strong><br />
     </div>
 
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
     <img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a Cat" />
+
+    <p>Visits: {{ visits }}</p>
 {% endblock %}
