--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -6,13 +6,17 @@
 {% endblock %}
 
 {% block body_block %}
-<h1>Change your Password</h1>
+    <div class="jumbotron p-4">
+        <div class="container">
+            <h1 class="jumbotron-heading">Change your Password</h1>
+        </div>
+    </div>
 
-<form method="post" action=".">
-    {% csrf_token %}
+    <form method="post" action=".">
+        {% csrf_token %}
 
-    {{ form.as_p }}
+        {{ form.as_p }}
 
-    <input type="submit" value="Change Password" />
-</form>
+        <input type="submit" value="Change Password" />
+    </form>
 {% endblock %}
