--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -7,21 +7,33 @@
 
 
 {% block body_block %}
-    <h1>Add a Page to Category {{ category.name }}</h1>
+    <div class="jumbotron p-4">
+        <div class="container">
+            <h1 class="jumbotron-heading">
+                Add a Page to Category {{ category.name }}</h1>
+        </div>
+    </div>
 
-    <div>
-        <form id="add_page_form" method="post" 
-            action="{% url 'rango:add_page' category.slug %}">
+    <div class="container">
+        <div class="row">
+            <form role="form" id="add_page_form" method="post" 
+                  action="{% url 'rango:add_page' category.slug %}s">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
             {% endfor %}
             {% for field in form.visible_fields %}
                 {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
+                {{ field.help_text }}<br />
+                {{ field }}<br />
+                <div class="p-2"></div>
             {% endfor %}
-            <input type="submit" name="submit" value="Add Page" />
-        </form>
+                <br />
+                <button class="btn btn-primary" type="submit" name="submit">
+                    Add Page
+                </button>
+                <div class="p-5"></div>
+            </form>
+        </div>
     </div>
 {% endblock %}
