--- a/templates/rango/restricted.html
+++ b/templates/rango/restricted.html
@@ -7,7 +7,11 @@
 
 
 {% block body_block %}
-    <h1>Rango says...</h1>
+    <div class="jumbotron p-4">
+        <div class="container">
+            <h1 class="jumbotron-heading">Rango says...</h1>
+        </div>
+    </div>
 
     <div>
         this is the restricted page. <br />
