--- a/templates/registration/registration_closed.html
+++ b/templates/registration/registration_closed.html
@@ -7,7 +7,11 @@
 
 
 {% block body_block %}
-    <h1>Registeraation Closed</h1>
+    <div class="jumbotron p-4">
+        <div class="container">
+            <h1 class="jumbotron-heading">Registeraation Closed</h1>
+        </div>
+    </div>
 
     <p>Unfortunately, registration is currently closed. Please try again later!</p>
 {% endblock body_block %}
