--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -70,8 +70,13 @@
         </div>
     </div>
 
-    <div>
-        <img src="{% static 'images/rango.jpg' %}"
-                alt="Picture of Rango" />
+    <br>
+
+    <div class="container">
+        <div class="row">
+            <div class="mx-auto">
+                <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+            </div>
+        </div>
     </div>
 {% endblock %}
