--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -15,20 +15,78 @@
         <div class="jumbotron p-4">
             <div class="container">
                 <h1 class="jumbotron-heading">{{ category.name }}</h1>
+                <div>
+                    <strong id="like_count">{{ category.likes }}</strong> likes
+                {% if user.is_authenticated %}
+                    <button id="like_btn" class="btn btn-primary btn-sm"
+                            data-categoryid="{{ category.id }}" type="button">
+                        <span data-feather="thumbs-up"></span>
+                        Like Category
+                    </button>
+                {% endif %}
+                </div>
             </div>
         </div>
+
+        <div id="pages-listing">
         {% if pages %}
             <ul>
             {% for page in pages %}
-                <li><a href='{{ page.url }}'>{{ page.title }}</a></li>
+                <li>
+                    <a href="{% url 'rango:goto' %}?page_id={{ page.id }}">{{ page.title }}</a>
+                {% if page.views > 1 %}
+                    ({{ page.views }} views)
+                {% elif page.views == 1 %}
+                    ({{ page.views }} view)
+                {% endif %}
+                </li>
             {% endfor %}
             </ul>
         {% else %}
             <strong>No pages currently in category.</strong>
         {% endif %}
+        </div>
 
         {% if user.is_authenticated %}
-            <a href="{% url 'rango:add_page' category.slug %}">Add Page</a><br />
+            <a href="{% url 'rango:add_page' category.slug %}">Add Page Manually</a><br><br>
+        {% endif %}
+
+        {% if user.is_authenticated %}
+        <div>
+            <form class="form-inline" id="user-form" method="post" action="{% url 'rango:show_category' category.slug %}">
+                {% csrf_token %}
+        
+                <div class="form-group">
+                    <input class="form-control" type="text" size="50" name="query" id="query" value="{{ query }}" />
+                </div>
+        
+                <button class="btn btn-primary" type="submit" name="submit">Search</button>
+            </form>
+        </div>
+        <div>
+            {% if result_list %}
+            <h2>Results</h2>
+        
+            <div class="list-group">
+            {% for result in result_list %}
+                <div class="list-group-item">
+                    <h3 class="list-group-item-heading">
+                        <a href="{{ result.link }}">{{ result.title|safe|escape }}</a>
+                        <button class="btn btn-info btn-sm rango-page-add" type="button"
+                                data-categoryid="{{ category.id }}"
+                                data-title="{{ result.title }}" 
+                                data-url="{{ result.link }}">
+                            Add
+                        </button>
+                    </h3>
+                    <p class="list-group-item-text">
+                        {{ result.summary|safe|escape }}
+                    </p>
+                </div>
+            {% endfor %}
+            </div>
+            {% endif %}
+        </div>
         {% endif %}
 
     {% else %}
